--- a/pages/wxml/index.wxml
+++ b/pages/wxml/index.wxml
@@ -1,15 +1,16 @@
-<!--pages/wxml/index.wxml-->
-<view class="btn-area">
-  <view class="body-view">
-    <text>{{text}}</text>
-    <button bindtap="add">add line</button>
-    <button bindtap="remove">remove line</button>
-  </view>
+<view class="page">
+    <view class="page__hd">
+        <text class="page__title">radio</text>
+        <text class="page__desc">单选框</text>
+    </view>
+    <view class="page__bd">
+        <view class="section section_gap">
+            <radio-group class="radio-group" bindchange="radioChange">
+                <label class="radio" wx:for-items="{{items}}">
+                    <radio value="{{item.name}}" checked="{{item.checked}}"/>
+                    {{item.value}}
+                </label>
+            </radio-group>
+        </view>
+    </view>
 </view>
-
-<!-- 可以用作选项 -->
-<radio-group class="radio-group" bindchange="radioChange">
-  <label class="radio" wx:for="{{items}}">
-    <radio value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
-  </label>
-</radio-group>
