--- a/app.wxss
+++ b/app.wxss
@@ -36,16 +36,6 @@
   flex-grow: 1;
   overflow-x: hidden;
 }
-
-.page__title{
-  display: block;
-  font-size: 20px;
-}
-.page__desc{
-  margin-top: 5px;
-  font-size: 14px;
-  color: #888888;
-}
 .section_gap{
   padding: 0 15px;
 }
@@ -64,9 +54,37 @@ page {
   display: block;
   margin-bottom: 10px;
 }
-
-
-
+.page__title{
+  display: block;
+  font-size: 20px;
+}
+.page__desc{
+  margin-top: 5px;
+  font-size: 14px;
+  color: #888888;
+}
+.page__hd{
+  padding: 40px;
+}
+.page-body-buttons {
+  width: 100%;
+}
+.page-body-button {
+  margin: 25rpx;
+}
+.page-body-title {
+  margin-bottom: 100rpx;
+  font-size: 32rpx;
+}
+.userinfo-avatar {
+  border-radius: 128rpx;
+  width: 128rpx;
+  height: 128rpx;
+}
+.userinfo-nickname {
+  margin-top: 20rpx;
+  font-size: 38rpx;
+}
 
 
 
