--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,30 +1,36 @@
 <!--index.wxml-->
 
-<view class="container">
-    <!--
-      <view class="userinfo">
-        <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-        <block wx:else>
-          <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-          <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+<view class="page">
+    <view class="page-body-info">
+        <view class="page-body-title">用户信息</view>
+        <block wx:if="{{hasUserInfo === true}}">
+            <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}"></image>
+            <text class="userinfo-nickname">{{userInfo.nickName}}</text>
         </block>
-      </view>
-      <view class="usermotto">
-        <text class="user-motto">{{motto}}</text>
-      </view>
+<!--
+        <view class="page-body-buttons">
+            <button class="page-body-button" type="primary" bindtap="getUserInfo">获取用户信息</button>
+        </view>
+        -->
     </view>
-    -->
 
-
-    <view class="page-body">
-        <navigator url="{{APIItem.url}}">
-            <view class="menu-item-api-item" style="{{index === 0 ? 'border-top:none;' : ''}}">
-                <view class="menu-item-api-item-text">
-                    <text class="menu-item-api-item-text-zhname">{{APIItem.zhName}}</text>
-                    <text class="menu-item-api-item-text-enname">{{APIItem.enName}}</text>
+    <view class="page__bd">
+        <view class="btn-area">
+            <!--
+            <navigator url="{{APIItem.url}}">
+                <view class="menu-item-api-item" style="{{index === 0 ? 'border-top:none;' : ''}}">
+                    <view class="menu-item-api-item-text">
+                        <text class="menu-item-api-item-text-zhname">{{APIItem.zhName}}</text>
+                        <text class="menu-item-api-item-text-enname">{{APIItem.enName}}</text>
+                    </view>
+                    <image class="menu-item-api-item-arrow" src="/image/arrowright.png"></image>
                 </view>
-                <image class="menu-item-api-item-arrow" src="/image/arrowright.png"></image>
-            </view>
-        </navigator>
+            </navigator>
+        -->
+            <!-- 进入计划 -->
+            <navigator url="plan?title=navigate" hover-class="navigator-hover">
+                <button type="default">开始答题</button>
+            </navigator>
+        </view>
     </view>
 </view>
