--- a/pages/plan/plan.wxml
+++ b/pages/plan/plan.wxml
@@ -1,7 +1,22 @@
 <view class="page">
     <view class="page__hd">
         <text class="page__desc">地区为:{{region}}</text>
+        <view class="section section_gap">
+            <radio-group class="radio-group" bindchange="radioRegionChange">
+                <label class="radio" wx:for-items="{{regionItems}}">
+                    <radio value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
+                </label>
+            </radio-group>
+        </view>
         <text class="page__desc">考试类型为：{{examType}}</text>
+        <view class="section section_gap">
+            <radio-group class="radio-group" bindchange="radioExamTypeChange">
+                <label class="radio" wx:for-items="{{examItems}}">
+                    <radio value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
+                </label>
+            </radio-group>
+        </view>
         <text class="page__desc">每日需刷题数为：{{dailyNeedNum}}</text>
+
     </view>
 </view>
